[package]
name = "lb-deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["rt", "macros", "sync", "time"] }
tonic = { version = "0.12.0" }
prost = "0.13.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
secretrs = { version = "0.1.2", features = ["grpc"] }
shade-protocol = { path = "../shade/packages/shade_protocol", features = [
  "liquidity-book",
] }
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
color-eyre = { version = "0.6.3" }
serde = "1.0.203"
serde_json = "1.0.117"
base64 = "0.22.1"
hex = "0.4.3"
hex-literal = "0.4.1"
regex = "1.10.4"
bip32 = "0.5.1"
bip39 = "2.0.0"
nanorand = { version = "0.7.0", features = ["getrandom", "zeroize"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sha2 = "0.10.8"
